syntax = "proto3";

package chatting.user;

import "google/protobuf/timestamp.proto";
import public "id.proto";

message User {
    chatting.id.UserId id = 1;
    string name = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
}

message GetUserRequest {
    chatting.id.UserId id = 1;
}

message GetUserResponse {
    User user = 1;
}

message CreateUserRequest {
    string name = 1;
}

message CreateUserResponse {
    User user = 1;
}

message UpdateUserRequest {
    chatting.id.UserId id = 1;
    string name = 2;
}

message UpdateUserResponse {
    User user = 1;
}

message DeleteUserRequest {
    chatting.id.UserId id = 1;
}

message DeleteUserResponse {
    User user = 1;
}

service UserService {
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}
